surepharma/force-app/main/default/objects/EmergencyCall__c/EmergencyCall__c.object-meta.xml
<CustomObject>
    <description>Records of emergency calls made to third-party emergency hotline after patch application.  Generated dynamically from callout to Google sheet Emergency Call Log (https://docs.google.com/spreadsheets/d/1ByVvhND1weHo1pQLEhmXv5texOd_O_1n3r7HC2MOobg/)</description>
    <label>Emergency Call</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>Emergency Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emergency Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>