surepharma/force-app/main/default/objects/EmergencyCall__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>EmergencyCalls</relationshipName>
    <type>Lookup</type>
</CustomField>