surepharma/force-app/main/default/objects/EmergencyCall__c/fields/LogId__c.field-meta.xml
<CustomField>
    <fullName>LogId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id of emergency call from EmergencyCallLogMock</description>
    <externalId>true</externalId>
    <inlineHelpText>Generated from an external source</inlineHelpText>
    <label>LogId</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>